oauth authentication implemented on each route and running on swagger
